[package]
name = "rust_redlock"
description = "A Rust Redlock implementation for distributed, highly-available redis locks"
version = "0.4.0"
authors = ["David Cai <davidcai1993@yahoo.com>"]
documentation = "https://docs.rs/rust_redlock/0.4.0/rust_redlock"
homepage = "https://github.com/DavidCai1993/redlock-rs"
readme = "README.md"
repository = "https://github.com/DavidCai1993/redlock-rs"
keywords = ["redlock", "redis", "lock", "mutex", "distribution"]
categories = ["concurrency", "algorithms"]
license = "MIT"

[dependencies]
lazy_static = "0.2"
redis = "0.5.3"
quick-error = "1.2"
rand = "0.3.15"
